# epochraft

./: LICENSE  README.md  pyproject.toml  release_nightly.sh  tox.ini  tutorial.ipynb
.github/workflows/: checks.yml  tests.yml
cpds/: __init__.py  base.py  testing.py
cpds/sources/: __init__.py  mosaicml.py
cpds/transforms/: __init__.py  concat_chunk.py  count.py  filter_map.py
epochraft/: __init__.py  base.py  caching.py  testing.py
epochraft/combinations/: __init__.py  concat.py  interleave.py
epochraft/sources/: __init__.py  iterable.py  mosaicml.py  sequence.py
epochraft/sources/files/: __init__.py  dataset.py  delay_handler.py  generators.py  shard_reader.py  shards_mux.py
epochraft/transforms/: __init__.py  batch.py  concat_chunk.py  count.py  filter_map.py  interleave.py  parallel_filter_map.py
epochraft/transforms/basic/: __init__.py  batch.py  count.py  filter_map.py  parallel_filter_map.py  shuffle.py  stride.py
epochraft/transforms/basic/parallel_filter_map/: __init__.py  dataset.py  imap.py
epochraft/transforms/language_modeling/: __init__.py  bos_eos.py  chunk.py  concat_chunk.py  ensure_bos_eos.py  pack_chunk.py  padding.py  tokenization.py  tokenizer_utils.py
tests/: caching.py  conftest.py
tests/combinations/: test_concat.py  test_interleave.py
tests/sources/: test_iterable.py  test_mosaicml.py  test_sequence.py
tests/sources/files/: conftest.py  test_dataset.py  test_generators.py  test_shard_mux.py  test_shard_reader.py
tests/transforms/: test_batch.py  test_concat_chunk.py  test_count.py  test_filter_map.py  test_interleave.py  test_parallel_filter_map.py
tests/transforms/basic/: test_batch.py  test_count.py  test_filter_map.py  test_parallel_filter_map.py  test_shuffle.py  test_stride.py
tests/transforms/language_modeling/: test_chunk.py  test_concat_chunk.py  test_ensure_bos_eos.py  test_pack_chunk.py  test_tokenize.py
